--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "prisma generate && next build --webpack",
     "start": "next start",
     "lint": "eslint",
-    "postinstall": "prisma generate && npx playwright install-deps && npx playwright install chromium"
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -17,6 +17,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@sparticuz/chromium-min": "^141.0.0",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.12.2",
     "cheerio": "^1.1.2",
@@ -26,6 +27,7 @@
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "playwright": "^1.56.1",
+    "puppeteer-core": "^24.26.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
